--- a/ML/익히기/실습06_01_종합실습(Iris).ipynb
+++ b/ML/익히기/실습06_01_종합실습(Iris).ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 189,
    "metadata": {
     "executionInfo": {
      "elapsed": 10,
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 190,
    "metadata": {
     "executionInfo": {
      "elapsed": 317,
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 191,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -118,7 +118,94 @@
     "id": "Z1ahypi3irLz",
     "outputId": "c2ebfe3a-0e79-481c-8b5b-5ee6859b5806"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sepal.Length</th>\n",
+       "      <th>Sepal.Width</th>\n",
+       "      <th>Petal.Length</th>\n",
+       "      <th>Petal.Width</th>\n",
+       "      <th>Species</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4.7</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Sepal.Length  Sepal.Width  Petal.Length  Petal.Width Species\n",
+       "0           5.1          3.5           1.4          0.2  setosa\n",
+       "1           4.9          3.0           1.4          0.2  setosa\n",
+       "2           4.7          3.2           1.3          0.2  setosa\n",
+       "3           4.6          3.1           1.5          0.2  setosa\n",
+       "4           5.0          3.6           1.4          0.2  setosa"
+      ]
+     },
+     "execution_count": 191,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 데이터 살펴보기\n",
     "data.head()"
@@ -126,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 192,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -146,7 +233,112 @@
     "id": "HGHlgWSwtSYh",
     "outputId": "b1ec2c59-48c7-44eb-cdd9-bd00c7b35ed4"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sepal.Length</th>\n",
+       "      <th>Sepal.Width</th>\n",
+       "      <th>Petal.Length</th>\n",
+       "      <th>Petal.Width</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>150.000000</td>\n",
+       "      <td>150.000000</td>\n",
+       "      <td>150.000000</td>\n",
+       "      <td>150.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>5.843333</td>\n",
+       "      <td>3.057333</td>\n",
+       "      <td>3.758000</td>\n",
+       "      <td>1.199333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.828066</td>\n",
+       "      <td>0.435866</td>\n",
+       "      <td>1.765298</td>\n",
+       "      <td>0.762238</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>4.300000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.100000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>5.100000</td>\n",
+       "      <td>2.800000</td>\n",
+       "      <td>1.600000</td>\n",
+       "      <td>0.300000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>5.800000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>4.350000</td>\n",
+       "      <td>1.300000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>6.400000</td>\n",
+       "      <td>3.300000</td>\n",
+       "      <td>5.100000</td>\n",
+       "      <td>1.800000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>7.900000</td>\n",
+       "      <td>4.400000</td>\n",
+       "      <td>6.900000</td>\n",
+       "      <td>2.500000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Sepal.Length  Sepal.Width  Petal.Length  Petal.Width\n",
+       "count    150.000000   150.000000    150.000000   150.000000\n",
+       "mean       5.843333     3.057333      3.758000     1.199333\n",
+       "std        0.828066     0.435866      1.765298     0.762238\n",
+       "min        4.300000     2.000000      1.000000     0.100000\n",
+       "25%        5.100000     2.800000      1.600000     0.300000\n",
+       "50%        5.800000     3.000000      4.350000     1.300000\n",
+       "75%        6.400000     3.300000      5.100000     1.800000\n",
+       "max        7.900000     4.400000      6.900000     2.500000"
+      ]
+     },
+     "execution_count": 192,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 기초통계정보 확인\n",
     "data.describe()"
@@ -174,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 193,
    "metadata": {
     "executionInfo": {
      "elapsed": 4,
@@ -192,10 +384,11 @@
    "outputs": [],
    "source": [
     "# target 확인\n",
-    "\n",
+    "target = 'Species'\n",
     "\n",
     "# 데이터 분리\n",
-    "\n"
+    "x = data.drop(target, axis=1)\n",
+    "y = data[target]"
    ]
   },
   {
@@ -209,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 194,
    "metadata": {
     "executionInfo": {
      "elapsed": 3,
@@ -226,7 +419,8 @@
    },
    "outputs": [],
    "source": [
-    "# 정규화\n"
+    "# 정규화\n",
+    "x = (x - x.min()) / (x.max() - x.min())"
    ]
   },
   {
@@ -240,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 195,
    "metadata": {
     "executionInfo": {
      "elapsed": 751,
@@ -258,9 +452,10 @@
    "outputs": [],
    "source": [
     "# 모듈 불러오기\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "\n",
-    "# 7:3으로 분리\n"
+    "# 7:3으로 분리\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.3, random_state=2022)"
    ]
   },
   {
@@ -289,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 196,
    "metadata": {
     "executionInfo": {
      "elapsed": 448,
@@ -307,12 +502,14 @@
    "outputs": [],
    "source": [
     "# 불러오기\n",
-    "\n"
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.metrics import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 197,
    "metadata": {
     "executionInfo": {
      "elapsed": 23,
@@ -329,12 +526,13 @@
    },
    "outputs": [],
    "source": [
-    "# 선언하기\n"
+    "# 선언하기\n",
+    "model = KNeighborsClassifier()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 198,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -355,12 +553,13 @@
    },
    "outputs": [],
    "source": [
-    "# 성능검증\n"
+    "# 성능검증\n",
+    "cv_score = cross_val_score(model, x_train, y_train, cv=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 199,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -400,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 200,
    "metadata": {
     "executionInfo": {
      "elapsed": 16,
@@ -418,12 +617,12 @@
    "outputs": [],
    "source": [
     "# 불러오기\n",
-    "\n"
+    "from sklearn.tree import DecisionTreeClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 201,
    "metadata": {
     "executionInfo": {
      "elapsed": 17,
@@ -440,12 +639,13 @@
    },
    "outputs": [],
    "source": [
-    "# 선언하기\n"
+    "# 선언하기\n",
+    "model = DecisionTreeClassifier(random_state=2022)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 202,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -466,12 +666,13 @@
    },
    "outputs": [],
    "source": [
-    "# 성능검증\n"
+    "# 성능검증\n",
+    "cv_score = cross_val_score(model, x_train, y_train, cv=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 203,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -509,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 204,
    "metadata": {
     "executionInfo": {
      "elapsed": 16,
@@ -527,12 +728,12 @@
    "outputs": [],
    "source": [
     "# 불러오기\n",
-    "\n"
+    "from sklearn.linear_model import LogisticRegression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 205,
    "metadata": {
     "executionInfo": {
      "elapsed": 17,
@@ -549,12 +750,13 @@
    },
    "outputs": [],
    "source": [
-    "# 선언하기\n"
+    "# 선언하기\n",
+    "model = LogisticRegression()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 206,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -575,12 +777,13 @@
    },
    "outputs": [],
    "source": [
-    "# 성능검증\n"
+    "# 성능검증\n",
+    "cv_score = cross_val_score(model, x_train, y_train, cv=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 207,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -619,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 208,
    "metadata": {
     "executionInfo": {
      "elapsed": 16,
@@ -637,12 +840,12 @@
    "outputs": [],
    "source": [
     "# 불러오기\n",
-    "\n"
+    "from sklearn.svm import SVC"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 209,
    "metadata": {
     "executionInfo": {
      "elapsed": 17,
@@ -659,12 +862,13 @@
    },
    "outputs": [],
    "source": [
-    "# 선언하기\n"
+    "# 선언하기\n",
+    "model = SVC(random_state=2022)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 210,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -685,12 +889,13 @@
    },
    "outputs": [],
    "source": [
-    "# 성능검증\n"
+    "# 성능검증\n",
+    "cv_score = cross_val_score(model, x_train, y_train, cv=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 211,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -729,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 212,
    "metadata": {
     "executionInfo": {
      "elapsed": 297,
@@ -747,12 +952,12 @@
    "outputs": [],
    "source": [
     "# 불러오기\n",
-    "\n"
+    "from sklearn.ensemble import RandomForestClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 213,
    "metadata": {
     "executionInfo": {
      "elapsed": 4,
@@ -769,12 +974,13 @@
    },
    "outputs": [],
    "source": [
-    "# 선언하기\n"
+    "# 선언하기\n",
+    "model = RandomForestClassifier(random_state=2022)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 214,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -795,12 +1001,13 @@
    },
    "outputs": [],
    "source": [
-    "# 성능검증\n"
+    "# 성능검증\n",
+    "cv_score = cross_val_score(model, x_train, y_train, cv=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 215,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -839,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 216,
    "metadata": {
     "executionInfo": {
      "elapsed": 4,
@@ -857,12 +1064,12 @@
    "outputs": [],
    "source": [
     "# 불러오기\n",
-    "\n"
+    "from xgboost import XGBClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 217,
    "metadata": {
     "executionInfo": {
      "elapsed": 370,
@@ -879,12 +1086,13 @@
    },
    "outputs": [],
    "source": [
-    "# 선언하기\n"
+    "# 선언하기\n",
+    "model = XGBClassifier(eval_metric='mlogloss', random_state=2022)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 218,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -905,12 +1113,13 @@
    },
    "outputs": [],
    "source": [
-    "# 성능검증\n"
+    "# 성능검증\n",
+    "cv_score = cross_val_score(model, x_train, y_train, cv=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 219,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -957,14 +1166,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 220,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========================================\n",
+      "KNN : 0.961\n",
+      "Decision Tree : 0.952\n",
+      "Logistic Regression : 0.923\n",
+      "SVM : 0.951\n",
+      "Random Forest : 0.952\n",
+      "XGBoost : 0.932\n",
+      "========================================\n"
+     ]
+    }
+   ],
    "source": [
     "# 평가 결과 확인\n",
     "print('=' * 40)\n",
     "for m_name, score in result.items():\n",
-    "    print(m_name, score.round(3))\n",
+    "    print(m_name, ':', score.round(3))\n",
     "print('=' * 40)"
    ]
   }
@@ -991,7 +1215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
